<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation_lembaga"
    app:startDestination="@+id/navigation_home_lembaga">

    <fragment
        android:id="@+id/navigation_home_lembaga"
        android:name="com.si410702.java.zakatyuk.ui.home.HomeLembagaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_lembaga" />

    <fragment
        android:id="@+id/navigation_list_lembaga"
        android:name="com.si410702.java.zakatyuk.ui.list.ListLembagaFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list_lembaga" />

    <fragment
        android:id="@+id/navigation_profile_lembaga"
        android:name="com.si410702.java.zakatyuk.ui.profile.ProfileLembagaFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_lembaga"/>
</navigation>