<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/outer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/bukti_alokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center_horizontal"
            android:text="@string/alokasi_berhasil_title"
            android:textAlignment="center"
            android:textColor="#A7A7A7"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/struk_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/alokasi_id_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_id_pemabayaran"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_date_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_tanggal"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_nama_pengalokasi"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_lembaga_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_lembaga"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_lembaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_jumlah_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_jumlah"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_penerima_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_penerima"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_penerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_alamat_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_alamat"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_telp_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_berhasil_no_telp"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />
        </LinearLayout>

        <Button
            android:id="@+id/lanjut_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="#2ECC71"
            android:onClick="toHome"
            android:text="@string/alokasi_berhasil_oke"
            android:textColor="#FFF" />
    </LinearLayout>

</ScrollView>