<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlokasiZakatDetail">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/alokasi_jenis_zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alokasi_detail_total_zakat"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/alokasi_jumlah_zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="40sp"
            tools:text="Rp -" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alokasi_detail_pembayar_zakat"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/ic_app_user" />

            <TextView
                android:id="@+id/alokasi_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="Nama User" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alokasi_detail_detail"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/struk_border"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/alokasi_id_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_detail_id_pembayaran"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_date_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_detail_tanggal_pembayaran"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_detail_email"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />

            <TextView
                android:id="@+id/alokasi_telp_user_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alokasi_detail_no_telp"
                android:textColor="#A7A7A7" />

            <TextView
                android:id="@+id/alokasi_telp_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                tools:text="-" />
        </LinearLayout>

        <Button
            android:id="@+id/lanjut_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:background="#2ECC71"
            android:onClick="lanjutAlokasi"
            android:text="@string/alokasi_detail_btn"
            android:textColor="#FFF" />

    </LinearLayout>

</ScrollView>